# hax-desktop

./: .gitignore  CODE_OF_CONDUCT.md  README.md  hax.db  makefile  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: liniting.yml  python-linting.yml  release.yml  snyk-security.yml  test.yml  unit-tests.yml
hax/: app.py  config.py  main.py  requirements.txt
hax/.config/: db.yml  log.yml
hax/classes/: attack.py  enums.py
hax/database/: attack.py  attack_ops.py  db.py  setting.py  setting_ops.py  table_operation.py  table_operations.py  table_ops.py
hax/frames/: about_frame.py  attack_frame.py  base_frame.py  main_menu.py  setting_frame.py  sqli_frame.py  xss_frame.py
hax/gui/: about_frame.py  attack_frame.py  setting_frame.py  sqli_frame.py  xss_frame.py
hax/setup/: setup.py
hax/utilities/: config.py  log.py
haxdesktop/: app.py  main.py
haxdesktop/assets/: design.yml  general.yml
haxdesktop/classes/: enums.py
haxdesktop/frames/: attack_frame.py  base_frame.py  crack_password_frame.py  sqli_frame.py  xss_frame.py
haxdesktop/utilities/: config.py
haxdesktop/widgets/: main_menu.py  setting_menu.py
haxdesktop/windows/: about_window.py  setting_window.py
scripts/: check.sh  linting_check.sh  release.sh
scripts/release-os/: macos.sh
src/: app.py  main.py
src/.config/: db.yml  design.yml  general.yml
src/core/: requirements.txt
src/desktop/: app.py  main.py  requirements.txt
tests/: __init__.py  test_app.py  test_config.py  test_log.py  test_setting_frame.py  test_sqli_frame.py  test_xss_frame.py
(+113 files in other folders)
